...
    
    /// Za pomocą tej funkcji dodajemu naszych testowych użytkowników.
    
    @IBAction func addUser(_ sender: UIBarButtonItem) {
        
        let user = User(context: managedContext)
        user.name = "New user"
        
        let currentUserId = userDefaults.integer(forKey: Keys.currentUserId.rawValue)
        
        let nextUserId = currentUserId + 1
        
        userDefaults.set(nextUserId, forKey: Keys.currentUserId.rawValue)
...
